--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,11 @@
 		</dependency>
 
 		<!-- log4j日志 -->
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>${commons-logging.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
 
 		<dependency>
 			<groupId>log4j</groupId>
@@ -49,8 +49,8 @@
 	
 	<properties>
 		<junit.version>4.10</junit.version>
-		<commons-logging.version>1.1.1</commons-logging.version>
-		<log4j.version>1.2.9</log4j.version>
+        <slf4j.version>1.7.5</slf4j.version>
+		<log4j.version>1.2.12</log4j.version>
 	</properties>
 
 </project>
