--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,26 @@
                     <mainClass>com.gorden5566.demos.jetty.JettyServer</mainClass>
                 </configuration>
             </plugin>
+
+			<!-- 单元测试覆盖率检测 -->
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>${coveralls-maven-plugin.version}</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${cobertura-maven-plugin.version}</version>
+				<configuration>
+					<format>xml</format>
+					<maxmem>256m</maxmem>
+					<!-- aggregated reports for multi-module projects -->
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
@@ -70,10 +90,13 @@
 	</dependencies>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>4.10</junit.version>
         <slf4j.version>1.7.5</slf4j.version>
 		<log4j.version>1.2.12</log4j.version>
         <jetty-server.version>8.2.0.v20160908</jetty-server.version>
+		<coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
+		<cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
 	</properties>
 
 </project>
