--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
 				</configuration>
 			</plugin>
 
-            <plugin>
+			<!-- maven命令执行jetty -->
+			<plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.5.0</version>
@@ -81,6 +82,7 @@
 			<version>${log4j.version}</version>
 		</dependency>
 
+		<!-- jetty server -->
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
