--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.gorden5566</groupId>
+    <groupId>com.gorden5566</groupId>
     <artifactId>demo</artifactId>
     <version>1.0</version>
     <name>demo</name>
