--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <slf4j.version>1.7.5</slf4j.version>
         <log4j.version>1.2.12</log4j.version>
         <cglib.version>3.2.5</cglib.version>
+        <spring.version>5.0.8.RELEASE</spring.version>
         <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
         <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
     </properties>
@@ -45,6 +46,13 @@
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>${cglib.version}</version>
+        </dependency>
+
+        <!-- spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
         </dependency>
 
         <!-- mybatis -->
