--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <version>8.0.13</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.13</version>
+        </dependency>
+
     </dependencies>
 
     <build>
