--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
             <version>3.4.13</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.netty/netty -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.9.9.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
