--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,4 +4,4 @@ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %d %c [%t] %x %m - %rms%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d [%t] %-5p [%c{2}] %m%n
