--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
             <version>4.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+            <version>1.1.7.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
