--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,12 @@
             <version>3.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.25.0-GA</version>
+        </dependency>
+
     </dependencies>
 
     <build>
