--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,12 @@
             <version>4.2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
