--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
             <version>1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.71</version>
+        </dependency>
+
     </dependencies>
 
     <build>
