--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <cglib.version>3.2.5</cglib.version>
         <spring.version>5.0.8.RELEASE</spring.version>
         <jetty.version>9.4.19.v20190610</jetty.version>
+        <poi.version>3.17</poi.version>
         <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
         <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
     </properties>
@@ -177,6 +178,18 @@
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
             <version>4.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi.version}</version>
         </dependency>
 
     </dependencies>
