--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,12 @@
             <version>${poi.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
