--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,18 @@
             <version>2.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.70</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-shaded-client</artifactId>
+            <version>1.3.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
